# pasos-v2

./: .gitignore  .npmrc  AUTHORS  COPYRIGHT  GUIA_USUARIO.md  LICENSE  LICENSE-AGPL-3.0-or-later.txt  NOTICE  OPEN_SOURCE_RELEASE.md  PLAN_EXPANSION.md  PRIVACY.md  README.md  SECURITY.md  TRADEMARKS.md  analisis_tecnico_20260529.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  postcss.config.js  vite.config.ts
backend/: alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260302_0001_init.py  20260321_0002_activity_progress.py  20260321_0003_organizations_teams.py  20260321_0004_board_context_fields.py  20260321_0005_learning_support_fields.py  20260321_0006_learning_assignments.py  20260321_0007_board_comments.py  20260321_0008_board_meetings.py  20260321_0009_documents_calendar.py  20260516_0010_authentik_sso_identity.py
backend/app/: main.py
backend/app/core/: config.py  db.py  deps.py  errors.py  logging.py  rate_limit.py  security.py
backend/app/models/: __init__.py  activity.py  base.py  board.py  board_comment.py  board_document.py  board_document_version.py  board_meeting.py  calendar_feed.py  learning_assignment.py  team.py  (+7 more)
backend/tests/: conftest.py  test_board_comments.py  test_board_documents.py  test_board_meetings.py  test_calendar_feeds.py  test_executive_dashboard.py  test_health.py  test_learning_assignments.py  test_organizations_api.py  test_pilot_center_flow.py  test_share_activity.py  test_team_memberships_and_scoped_boards.py  test_timeline_overview.py
(+158 files in other folders)
