[build-system]
requires = ["setuptools>=75.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pasos-api"
version = "0.1.0"
description = "Pasos Pro API for EDUmind"
requires-python = ">=3.10"
dependencies = [
  "alembic==1.14.1",
  "email-validator==2.2.0",
  "fastapi==0.115.8",
  "gunicorn==23.0.0",
  "passlib==1.7.4",
  "psycopg[binary]==3.2.5",
  "pydantic==2.10.6",
  "pydantic-settings==2.7.1",
  "PyJWT==2.10.1",
  "python-json-logger==3.2.1",
  "sqlalchemy==2.0.38",
  "uvicorn==0.34.0",
]

[project.optional-dependencies]
dev = [
  "httpx==0.28.1",
  "pytest==8.3.4",
  "ruff==0.9.6",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
